force-app/main/default/objects/User_Document__c/User_Document__c.object-meta.xml
<CustomObject>
    <label>User Document</label>
    <nameField>
        <label>User Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>