force-app/main/default/objects/User_Document__c/fields/Category_Template__c.field-meta.xml
<CustomField>
    <fullName>Category_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category Template</label>
    <referenceTo>Category_Template__c</referenceTo>
    <relationshipLabel>User Documents</relationshipLabel>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>