force-app/main/default/objects/User_Document__c/fields/Document_Expiry_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiry_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Expiry Applicable?</label>
    <type>Checkbox</type>
</CustomField>