force-app/main/default/objects/User_Document__c/fields/Document_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Expiry_Date__c</fullName>
    <label>Document Expiry Date</label>
    <type>Date</type>
</CustomField>