force-app/main/default/objects/User_Document__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <formula>IF (NOT(ISBLANK(User_Document_Attachment_Id__c)),HYPERLINK(&apos;/lightning/_classic/&apos;+ User_Document_Attachment_Id__c,&apos;View&apos;, &apos;_blank&apos;),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document URL</label>
    <type>Text</type>
</CustomField>