force-app/main/default/objects/User_Document__c/fields/User_Document_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Document_Attachment_Id__c</fullName>
    <label>User Document Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>