force-app/main/default/objects/User_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>